--- a/.env.example
+++ b/.env.example
@@ -21,12 +21,16 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=<rds_endpoint>
+DB_PORT=3306
+DB_DATABASE=laravel_db
+DB_USERNAME=admin
+DB_PASSWORD=Gajen@97
+
+CACHE_DRIVER=dynamodb
+DYNAMODB_TABLE=LaravelCache
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
