--- a/infra/rds.yaml
+++ b/infra/rds.yaml
@@ -2,48 +2,54 @@ AWSTemplateFormatVersion: '2010-09-09'
 Description: RDS MySQL Instance for Laravel Application
 
 Resources:
-  # RDS Instance
-  LaravelRDS:
-    Type: AWS::RDS::DBInstance
-    Properties:
-      DBInstanceClass: db.t3.micro
-      AllocatedStorage: 9 # Increased storage to 20 GB (adjust as needed)
-      Engine: MySQL
-      EngineVersion: 8.0
-      MasterUsername: !Ref DBUsername
-      MasterUserPassword: !Ref DBPassword  # Using SecretManager for password
-      DBName: laravel_db
-      PubliclyAccessible: false
-      MultiAZ: false  # Adjust to true for high availability if required
-      VPCSecurityGroups:
-        - sg-09c489f9b1744dc49  # Update with your VPC security group ID
-      DBSubnetGroupName: !Ref RDSDBSubnetGroup
-
-  # Secrets Manager for the RDS password
-  DBPassword:
-    Type: AWS::SecretsManager::Secret
-    Properties:
-      Name: LaravelRDSPassword
-      SecretString: Gajen@89&97 # Store the password securely
-
-  # Secrets Manager for the RDS username
-  DBUsername:
-    Type: AWS::SecretsManager::Secret
-    Properties:
-      Name: LaravelDBUsername
-      SecretString: admin  # Store the username securely
-
-  # DB Subnet Group (Ensure the RDS instance is in the correct VPC)
+  # RDS DB Subnet Group
   RDSDBSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
     Properties:
       DBSubnetGroupDescription: "Subnet group for the Laravel RDS instance"
       SubnetIds:
         - subnet-0fdc7d89e2b460ee1
-        - subnet-0b0a0583d221d317b  # Replace with your subnet ID
+        - subnet-0b0a0583d221d317b # Replace with your actual subnet ID(s)
+
+  # RDS MySQL Instance
+  LaravelRDS:
+    Type: AWS::RDS::DBInstance
+    Properties:
+      DBInstanceClass: db.t3.micro
+      AllocatedStorage: 20  # Adjust storage size as needed
+      Engine: MySQL
+      EngineVersion: 8.0
+      MasterUsername: admin # Reference to the username stored in Secrets Manager
+      MasterUserPassword: Gajen@97  # Reference to the password stored in Secrets Manager
+      DBName: laravel_db
+      PubliclyAccessible: false
+      MultiAZ: false  # Set to true for high availability
+      BackupRetentionPeriod: 7  # Retain backups for 7 days
+      VPCSecurityGroups:
+        - sg-09c489f9b1744dc49  # Replace with your actual security group ID
+      DBSubnetGroupName: !Ref RDSDBSubnetGroup
+
+  # Secrets Manager for the DB password
+  DBPassword:
+    Type: AWS::SecretsManager::Secret
+    Properties:
+      Name: LaravelRDSPassword
+      SecretString: '{"password":"Gajen97_2025"}'  # Valid password (Ensure it meets the AWS RDS password policy)
+
+  # Secrets Manager for the DB username
+  DBUsername:
+    Type: AWS::SecretsManager::Secret
+    Properties:
+      Name: LaravelDBUsername
+      SecretString: '{"username":"admin"}'  # Replace with your actual DB username
 
 Outputs:
   # Output the RDS instance endpoint
   RDSInstanceEndpoint:
     Value: !GetAtt LaravelRDS.Endpoint.Address
     Description: "The RDS endpoint of the Laravel MySQL instance"
+
+  # Output the RDS instance ARN
+  RDSInstanceArn:
+    Value: !Ref LaravelRDS
+    Description: "The ARN of the RDS instance"
