--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,8 +56,9 @@ jobs:
     # Step 2: Build Docker Image
     - name: Build Docker Image
       run: |
-        docker build -t laravel-app .
+        docker build -f docker/Dockerfile -t laravel-app .
         docker tag laravel-app:latest 650251721226.dkr.ecr.ap-south-1.amazonaws.com/laravel-app:latest
+        
 
     # Step 3: Push Docker Image to ECR
     - name: Push to ECR
