--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,37 +1,23 @@
-# Use the official PHP image with PHP 8.1 (or another version as needed)
-FROM php:8.1-cli
+FROM php:8.2-fpm
 
-# Install dependencies required for your project
 RUN apt-get update && apt-get install -y \
-    git \
-    unzip \
-    curl \
-    libzip-dev \
     libpng-dev \
-    libjpeg62-turbo-dev \
+    libjpeg-dev \
     libfreetype6-dev \
-    && rm -rf /var/lib/apt/lists/*
+    zip \
+    unzip \
+    git \
+    curl \
+    libonig-dev \
+    libxml2-dev \
+    libzip-dev
 
-# Install PHP extensions
-RUN docker-php-ext-configure zip --with-libzip \
-    && docker-php-ext-install zip \
-    && docker-php-ext-install mysqli pdo pdo_mysql \
-    && docker-php-ext-enable mysqli pdo pdo_mysql
+RUN docker-php-ext-install pdo_mysql mbstring zip
 
-# Install Composer globally
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+COPY . /var/www
+WORKDIR /var/www
 
-# Set the working directory in the container
-WORKDIR /var/www/html
+RUN chmod -R 755 /var/www
+RUN chown -R www-data:www-data /var/www
 
-# Copy your application files into the container
-COPY . /var/www/html
-
-# Install the PHP dependencies via Composer
-RUN composer install --no-interaction --prefer-dist --optimize-autoloader
-
-# Expose port (if you're running a web server or any other service inside the container)
-EXPOSE 80
-
-# Command to run the application (if it's a web server, like Apache or Nginx, you'd replace this with the appropriate start command)
-CMD ["php", "-S", "0.0.0.0:80", "-t", "/var/www/html/public"]
+CMD php artisan serve --host=0.0.0.0 --port=8000
