--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -59,12 +59,42 @@ jobs:
         docker build -f docker/Dockerfile -t laravel-app .
         docker tag laravel-app:latest 650251721226.dkr.ecr.ap-south-1.amazonaws.com/laravel-app:latest
         
-
-    # Step 3: Push Docker Image to ECR
-    - name: Push to ECR
+    - name: Log in to Amazon ECR
       run: |
         aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 650251721226.dkr.ecr.ap-south-1.amazonaws.com
+
+    # Step 5: Push Docker Image to ECR
+    - name: Push Docker Image to ECR
+      run: |
         docker push 650251721226.dkr.ecr.ap-south-1.amazonaws.com/laravel-app:latest
+
+    # Step 6: Deploy Docker Image to ECS
+    - name: Deploy to ECS
+      run: |
+        # Update ECS task definition with the new Docker image
+        aws ecs register-task-definition \
+          --family laravel-app-task \
+          --container-definitions "[
+            {
+              \"name\": \"laravel-app\",
+              \"image\": \"650251721226.dkr.ecr.ap-south-1.amazonaws.com/laravel-app:latest\",
+              \"memory\": 512,
+              \"cpu\": 256,
+              \"essential\": true,
+              \"portMappings\": [{\"containerPort\": 80, \"hostPort\": 80}]
+            }
+          ]"
+        
+        # Update ECS service to use the new task definition
+        aws ecs update-service \
+          --cluster laravel-cluster \
+          --service laravel-app-service \
+          --force-new-deployment
+
+    # Optional: Output the ECS service URL
+    - name: Output ECS Service URL
+      run: |
+        echo "ECS service URL: http://$(aws ecs describe-services --cluster laravel-cluster --services laravel-app-service --query 'services[0].loadBalancers[0].dnsName' --output text)"
 
     # Step 4: Deploy to EKS
     - name: Deploy to EKS
