--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,45 +58,31 @@ jobs:
       run: |
         docker build -f docker/Dockerfile -t laravel-app .
         docker tag laravel-app:latest 650251721226.dkr.ecr.ap-south-1.amazonaws.com/laravel-app:latest
-
-    # Step 3: Log in to Amazon ECR
+        
+    # Step 3: Log in to Amazon ECR (automated using aws-actions/amazon-ecr-login)
     - name: Log in to Amazon ECR
-      run: |
-        aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 650251721226.dkr.ecr.ap-south-1.amazonaws.com
+      uses: aws-actions/amazon-ecr-login@v1
 
     # Step 4: Push Docker Image to ECR
     - name: Push Docker Image to ECR
       run: |
         docker push 650251721226.dkr.ecr.ap-south-1.amazonaws.com/laravel-app:latest
 
-    # Step 5: Deploy Docker Image to ECS
-    - name: Deploy to ECS
-      run: |
-        # Update ECS task definition with the new Docker image
-        aws ecs register-task-definition \
-          --family laravel-app-task \
-          --container-definitions "[{
-            \"name\": \"laravel-app\",
-            \"image\": \"650251721226.dkr.ecr.ap-south-1.amazonaws.com/laravel-app:latest\",
-            \"memory\": 512,
-            \"cpu\": 256,
-            \"essential\": true,
-            \"portMappings\": [{\"containerPort\": 80, \"hostPort\": 80}]
-          }]"
+    # Step 5: Update kube config for EKS
+    - name: Update kube config
+      run: aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ap-south-1
 
-        # Update ECS service to use the new task definition
-        aws ecs update-service \
-          --cluster laravel-cluster \
-          --service laravel-app-service \
-          --force-new-deployment
-
-    # Optional: Output the ECS service URL
-    - name: Output ECS Service URL
-      run: |
-        echo "ECS service URL: http://$(aws ecs describe-services --cluster laravel-cluster --services laravel-app-service --query 'services[0].loadBalancers[0].dnsName' --output text)"
-
-    # Step 6: Deploy to EKS (if applicable)
+    # Step 6: Deploy Docker Image to EKS
     - name: Deploy to EKS
       run: |
-        kubectl apply -f docker/deployment.yaml
-        kubectl apply -f docker/service.yaml
+        # Replace the image in your Kubernetes manifests (deployment.yaml)
+        sed -i.bak "s|DOCKER_IMAGE|650251721226.dkr.ecr.ap-south-1.amazonaws.com/laravel-app:latest|g" manifests/deployment.yaml
+
+        # Apply the Kubernetes manifests to EKS
+        kubectl apply -f manifests/deployment.yaml
+        kubectl apply -f manifests/service.yaml
+
+    # Optional: Output the EKS service URL
+    - name: Output EKS Service URL
+      run: |
+        echo "EKS service URL: http://$(kubectl get svc -o=jsonpath='{.items[0].status.loadBalancer.ingress[0].hostname}' -n default)"
