--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,6 +40,8 @@ jobs:
         aws cloudformation deploy \
           --template-file infra/ecr.yaml \
           --stack-name LaravelECR
+
+#Depolyment page 
   build-and-deploy:
     name: Build and Deploy to EKS
     runs-on: ubuntu-latest
@@ -64,25 +66,38 @@ jobs:
     # Step 4: Build and Push Docker Image
     - name: Build and Push Docker Image
       run: |
-        # Define the ECR repository URI
-        IMAGE_URI=650251721226.dkr.ecr.ap-south-1.amazonaws.com/laravel-app:latest
-        # Build the Docker image
+        IMAGE_TAG=latest
+        IMAGE_URI=650251721226.dkr.ecr.ap-south-1.amazonaws.com/laravel-app:$IMAGE_TAG
+
+        echo "Building Docker image with tag: $IMAGE_URI"
         docker build -f docker/Dockerfile -t $IMAGE_URI .
-        # Push the Docker image to ECR
+
+        echo "Pushing Docker image to Amazon ECR"
         docker push $IMAGE_URI
+
     # Step 5: Update Kubernetes Config for EKS
     - name: Update kubeconfig for EKS
       run: |
         aws eks update-kubeconfig --region ap-south-1 --name ${{ secrets.EKS_CLUSTER_NAME }}
-    # Step 6: Deploy to EKS
+
+    # Step 6: Replace Image URI in Kubernetes Manifest
+    - name: Replace Docker Image in Kubernetes Manifest
+      run: |
+        IMAGE_TAG=latest
+        IMAGE_URI=650251721226.dkr.ecr.ap-south-1.amazonaws.com/laravel-app:$IMAGE_TAG
+
+        echo "Replacing DOCKER_IMAGE placeholder with $IMAGE_URI in Kubernetes manifest"
+        sed -i.bak "s|DOCKER_IMAGE|$IMAGE_URI|g" docker/deployment.yaml
+
+    # Step 7: Deploy to EKS
     - name: Deploy to EKS
       run: |
-        # Replace placeholder in Kubernetes deployment manifest with ECR image URI
-        sed -i.bak "s|DOCKER_IMAGE|650251721226.dkr.ecr.ap-south-1.amazonaws.com/laravel-app:latest|g" k8s/deployment.yaml
-        # Apply the updated manifests to EKS
-        kubectl apply -f docker/deployment.yaml \
+        echo "Applying Kubernetes deployment and service manifests"
+        kubectl apply -f docker/deployment.yaml
         kubectl apply -f docker/service.yaml
-    # Step 7: Output EKS Service URL
+
+    # Step 8: Output EKS Service URL
     - name: Output EKS Service URL
       run: |
-        echo "EKS service URL: http://$(kubectl get svc -o=jsonpath='{.items[0].status.loadBalancer.ingress[0].hostname}')"
+        SERVICE_URL=$(kubectl get svc -o=jsonpath='{.items[0].status.loadBalancer.ingress[0].hostname}')
+        echo "EKS Service URL: http://$SERVICE_URL"
