--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -96,17 +96,8 @@ jobs:
         kubectl apply -f docker/deployment.yaml
         kubectl apply -f docker/service.yaml
         
-    # Step 8: Deploy to LB
-    - name: Wait for LoadBalancer to be Provisioned
+    # Step 8: Output EKS Service URL
+    - name: Output EKS Service URL
       run: |
-        echo "Waiting for LoadBalancer to be ready..."
-        sleep  0.5 # Adjust if needed, depending on your LoadBalancer provisioning time
-        
-    #output URL
-    - name: Get EKS Service URL
-      run: |
-        SERVICE_URL=$(kubectl get svc laravel-service -o=jsonpath='{.status.loadBalancer.ingress[0].hostname}')
-        if [ -z "$SERVICE_URL" ];
-          exit 1
-        fi
+        SERVICE_URL=$(kubectl get svc -o=jsonpath='{.items[0].status.loadBalancer.ingress[0].hostname}')
         echo "EKS Service URL: http://$SERVICE_URL"
