--- a/infra/eks.yaml
+++ b/infra/eks.yaml
@@ -1,7 +1,39 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: EKS Cluster with Managed Node Group for Laravel Application
+Description: EKS Cluster for Laravel Application
 
 Resources:
+  # EKS Cluster Role
+  EKSClusterRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: eks.amazonaws.com
+            Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
+        - arn:aws:iam::aws:policy/AmazonEKSServicePolicy
+        - arn:aws:iam::aws:policy/AmazonEKSVPCResourceController
+
+  # EKS Node Role
+  EKSNodeRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ec2.amazonaws.com
+            Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
+        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
+        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
+
   # EKS Cluster
   EKSCluster:
     Type: AWS::EKS::Cluster
@@ -13,88 +45,25 @@ Resources:
           - subnet-0b0a0583d221d317b
         SecurityGroupIds:
           - sg-044b4b6bf5141af7f
-      RoleArn: arn:aws:iam::971422685560:role/aws-service-role/eks.amazonaws.com/AWSServiceRoleForAmazonEKS
+      RoleArn: arn:aws:iam::971422685560:role/EKSClusterRole
 
-  # Node Group
+  # EKS Node Group (Optional, if you want to add nodes directly in the same template)
   EKSNodeGroup:
     Type: AWS::EKS::Nodegroup
     Properties:
       ClusterName: !Ref EKSCluster
-      NodegroupName: LaravelNodeGroup
-      ScalingConfig:
-        MinSize: 1
-        MaxSize: 2
-        DesiredSize: 1
+      NodeRole: arn:aws:iam::971422685560:role/EKSNodeRole
       Subnets:
         - subnet-0fdc7d89e2b460ee1
         - subnet-0b0a0583d221d317b
       InstanceTypes:
         - t3.medium
-      AmiType: AL2_x86_64
-      NodeRole: !GetAtt EKSNodeRole.Arn
-
-  # IAM Role for Node Group
-  EKSNodeRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - ec2.amazonaws.com
-            Action:
-              - sts:AssumeRole
-      ManagedPolicyArns:
-        - arn:aws:iam::971422685560:policy/AmazonEKSWorkerNodePolicy
-        - arn:aws:iam::971422685560:policy/AmazonEKS_CNI_Policy
-        - arn:aws:iam::971422685560:policy/AmazonEC2ContainerRegistryReadOnly
-      Path: "/"
-
-  # IAM Instance Profile for Node Group
-  EKSNodeInstanceProfile:
-    Type: AWS::IAM::InstanceProfile
-    Properties:
-      Path: "/"
-      Roles:
-        - !Ref EKSNodeRole
-
-  # IAM Role for EKS Cluster
-  EKSClusterRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - eks.amazonaws.com
-            Action:
-              - sts:AssumeRole
-      ManagedPolicyArns:
-        - arn:aws:iam::971422685560:policy/AmazonEKSClusterPolicy
-        - arn:aws:iam::971422685560:policy/AmazonEKSVPCResourceController
-      Path: "/"
-
-  # IAM Instance Profile for EKS Cluster
-  EKSClusterInstanceProfile:
-    Type: AWS::IAM::InstanceProfile
-    Properties:
-      Path: "/"
-      Roles:
-        - !Ref EKSClusterRole
+      ScalingConfig:
+        MinSize: 1
+        MaxSize: 2
+        DesiredSize: 2
 
 Outputs:
   ClusterName:
     Value: !Ref EKSCluster
-    Description: The name of the EKS Cluster
-
-  NodeGroupName:
-    Value: !Ref EKSNodeGroup
-    Description: The name of the EKS Node Group
-
-  NodeInstanceRole:
-    Value: !Ref EKSNodeRole
-    Description: The IAM Role for the EKS Node Group
+    Description: Name of the EKS Cluster
