--- a/infra/eks.yaml
+++ b/infra/eks.yaml
@@ -41,27 +41,27 @@ Resources:
       Name: LaravelEKSCluster
       ResourcesVpcConfig:
         SubnetIds:
-          - subnet-0fdc7d89e2b460ee1
-          - subnet-0b0a0583d221d317b
+          - subnet-0ad7134cb6ddc4635  # Correct subnet ID 1
+          - subnet-06e4e7b357640bb4f  # Correct subnet ID 2
         SecurityGroupIds:
           - sg-044b4b6bf5141af7f
       RoleArn: arn:aws:iam::971422685560:role/EKSClusterRole
 
-  # EKS Node Group (Optional, if you want to add nodes directly in the same template)
+  # EKS Node Group
   EKSNodeGroup:
     Type: AWS::EKS::Nodegroup
     Properties:
       ClusterName: !Ref EKSCluster
       NodeRole: arn:aws:iam::971422685560:role/EKSNodeRole
       Subnets:
-        - subnet-0fdc7d89e2b460ee1
-        - subnet-0b0a0583d221d317b
+        - subnet-0ad7134cb6ddc4635  # Correct subnet ID 1
+        - subnet-06e4e7b357640bb4f  # Correct subnet ID 2
       InstanceTypes:
         - t3.medium
       ScalingConfig:
-        MinSize: 1
-        MaxSize: 2
-        DesiredSize: 2
+        MinSize: 1  # Minimum nodes
+        MaxSize: 2  # Maximum nodes
+        DesiredSize: 1  # Desired number of nodes
 
 Outputs:
   ClusterName:
