--- a/infra/eks.yaml
+++ b/infra/eks.yaml
@@ -1,165 +1,39 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: EKS Cluster with VPC, Subnets, IAM roles, and NodeGroup.
+Description: EKS Cluster with Node Group using provided IAM Roles
 
 Parameters:
-  NodeInstanceType:
-    Description: EC2 instance type for the EKS nodes
+  ClusterName:
     Type: String
-    Default: t3.medium
-  KubernetesVersion:
-    Description: Kubernetes version for the EKS Cluster
-    Type: String
-    Default: "1.21"
+    Default: my-eks-cluster
+    Description: Name of the EKS Cluster.
 
 Resources:
-
-  # VPC
-  VPC:
-    Type: AWS::EC2::VPC
-    Properties:
-      CidrBlock: 10.0.0.0/16
-      EnableDnsHostnames: true
-      EnableDnsSupport: true
-      Tags:
-        - Key: Name
-          Value: LaravelEKS-VPC
-
-  # Internet Gateway
-  InternetGateway:
-    Type: AWS::EC2::InternetGateway
-    Properties:
-      Tags:
-        - Key: Name
-          Value: LaravelEKS-IGW
-
-  VPCGatewayAttachment:
-    Type: AWS::EC2::VPCGatewayAttachment
-    Properties:
-      InternetGatewayId: !Ref InternetGateway
-      VpcId: !Ref VPC
-
-  # Public Subnets
-  PublicSubnet1:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      CidrBlock: 10.0.1.0/24
-      AvailabilityZone: !Select [0, !GetAZs ""]
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: LaravelEKS-PublicSubnet1
-
-  PublicSubnet2:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      CidrBlock: 10.0.2.0/24
-      AvailabilityZone: !Select [1, !GetAZs ""]
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: LaravelEKS-PublicSubnet2
-
-  # Route Table for Public Subnets
-  PublicRouteTable:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      VpcId: !Ref VPC
-      Tags:
-        - Key: Name
-          Value: LaravelEKS-PublicRouteTable
-
-  PublicRoute:
-    Type: AWS::EC2::Route
-    Properties:
-      RouteTableId: !Ref PublicRouteTable
-      DestinationCidrBlock: 0.0.0.0/0
-      GatewayId: !Ref InternetGateway
-
-  PublicSubnetRouteTableAssociation1:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnet1
-      RouteTableId: !Ref PublicRouteTable
-
-  PublicSubnetRouteTableAssociation2:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnet2
-      RouteTableId: !Ref PublicRouteTable
-
-  # IAM Role for the EKS Cluster
-  EKSClusterRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: "Allow"
-            Principal:
-              Service: "eks.amazonaws.com"
-            Action: "sts:AssumeRole"
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
-
-  # IAM Role for the EKS Nodegroup
-  EKSNodeRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: "Allow"
-            Principal:
-              Service: "ec2.amazonaws.com"
-            Action: "sts:AssumeRole"
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
-        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
-        - arn:aws:iam::aws:policy/AmazonVPCFullAccess
-
-  # EKS Cluster
   EKSCluster:
-    Type: AWS::EKS::Cluster
+    Type: "AWS::EKS::Cluster"
     Properties:
-      Name: "LaravelEKS"
-      RoleArn: !GetAtt EKSClusterRole.Arn
+      Name: !Ref ClusterName
+      RoleArn: arn:aws:iam::971422685560:role/AmazonEKSAutoClusterRole
       ResourcesVpcConfig:
         SubnetIds:
-          - !Ref PublicSubnet1
-          - !Ref PublicSubnet2
-        SecurityGroupIds: []
-      Version: !Ref KubernetesVersion
+          - subnet-0250022499a3db7f3  # Replace with actual Subnet IDs
+          - subnet-014c16cda66c7f078
+        SecurityGroupIds:
+          - sg-0992135dd56d6615c    # Replace with actual Security Group ID
 
-  # EKS Node Group
-  EKSNodeGroup:
-    Type: AWS::EKS::Nodegroup
+  NodeGroup:
+    Type: "AWS::EKS::Nodegroup"
     Properties:
-      ClusterName: !Ref EKSCluster
-      NodeRole: !GetAtt EKSNodeRole.Arn
+      ClusterName: !Ref ClusterName
+      NodeRole: arn:aws:iam::971422685560:role/AmazonEKSAutoNodeRole
+      ScalingConfig:
+        MinSize: 2
+        MaxSize: 2
+        DesiredSize: 2
       Subnets:
-        - !Ref PublicSubnet1
-        - !Ref PublicSubnet2
-      InstanceTypes:
-        - !Ref NodeInstanceType
-      DesiredSize: 1
-      MaxSize: 2
-      MinSize: 1
+        - subnet-0250022499a3db7f3
+        - subnet-014c16cda66c7f078
 
 Outputs:
-  VPCId:
-    Description: "VPC ID"
-    Value: !Ref VPC
-  PublicSubnet1Id:
-    Description: "Public Subnet 1 ID"
-    Value: !Ref PublicSubnet1
-  PublicSubnet2Id:
-    Description: "Public Subnet 2 ID"
-    Value: !Ref PublicSubnet2
   EKSClusterName:
-    Description: "EKS Cluster Name"
-    Value: !Ref EKSCluster
-  EKSNodeRoleArn:
-    Description: "EKS Node Role ARN"
-    Value: !GetAtt EKSNodeRole.Arn
+    Value: !Ref ClusterName
+    Description: The name of the EKS Cluster.
